# EdelApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  edelapp.icns  main.cpp  mainwindow.cpp  mainwindow.h
src/libs/EdelLib/: CMakeLists.txt
src/libs/EdelLib/src/: CMakeLists.txt  dummy.cpp  dummy.h
src/libs/EdelLib/tests/: CMakeLists.txt
src/libs/EdelLib/tests/tst_dummy/: CMakeLists.txt  tst_dummy.cpp
